update: FCMを用いてRemotePush通知を受信できるようにする

--- a/homete/Info.plist
+++ b/homete/Info.plist
@@ -2,10 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<true/>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_register._tcp</string>
 		<string>_register._udp</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+		<string>processing</string>
 	</array>
 </dict>
 </plist>
