update: 試しにログイン画面のスナップショットを生成するケースを実装

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ GoogleService-Info.plist
 GoogleService-Info-dev.plist
 .env
 
+# snapshot test
+hometeSnapshotTests/__Snapshots__/*
+
 # other
 
 Build/
