update: デフォルトブランチのコミットハッシュをキャッシュのキーにする

--- a/.github/workflows/ci_update_snapshot_images.yml
+++ b/.github/workflows/ci_update_snapshot_images.yml
@@ -30,15 +30,19 @@ jobs:
     runs-on: macos-26
 
     steps:
-      # fetch-depth の計算
-      - run: echo "fetch_depth=$(( commits + 1 ))" >> $GITHUB_ENV
-        env:
-          commits: ${{ github.event.pull_request.commits }}
-
       # チェックアウト(リポジトリからソースコードを取得)
       - uses: actions/checkout@v4.2.2
         with:
-          fetch-depth: ${{ env.fetch_depth }}
+          fetch-depth: 0
+
+      - name: Get latest commit of default branch
+        id: get_commit
+        run: |
+          DEFAULT_BRANCH=${{ github.event.repository.default_branch }}
+          git fetch origin $DEFAULT_BRANCH
+          LATEST_COMMIT=$(git rev-parse origin/$DEFAULT_BRANCH)
+          echo "LATEST_COMMIT=$LATEST_COMMIT"
+          echo "commit_sha=$LATEST_COMMIT" >> $GITHUB_OUTPUT
 
       # Xcodeの一覧出力
       - name: Show Xcode list
@@ -89,4 +93,4 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: hometeSnapshotTests/__Snapshots__/
-          key: v1-snapshot-images
+          key: v1-snapshot-images-${{ steps.get_commit.outputs.commit_sha }}
