--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ on:
 
 env:
   # チェックアウト
-  DEVELOPER_DIR: /Applications/Xcode_16.4.app
+  DEVELOPER_DIR: /Applications/Xcode_26.0.app
   WORKSPACE_DIR: homete.xcodeproj
   BUILD_SCHEME: homete
   TEST_PLAN: homete
@@ -31,7 +31,7 @@ env:
 jobs:
   build:
     # 実行環境はmacosに設定
-    runs-on: macos-15
+    runs-on: macos-26
 
     steps:
       # fetch-depth の計算
@@ -93,7 +93,7 @@ jobs:
           xcodebuild
           -project "${WORKSPACE_DIR}"
           -configuration Debug
-          -destination 'platform=iOS Simulator,OS=18.4,name=iPhone 16 Pro'
+          -destination 'platform=iOS Simulator,OS=18.6,name=iPhone 16 Pro'
           -scheme "${BUILD_SCHEME}"
           -testPlan "${TEST_PLAN}"
           -skipPackagePluginValidation
@@ -102,6 +102,18 @@ jobs:
           -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
           -resultBundlePath "${TEST_OUTPUT_PATH}"
           clean test |
+          xcbeautify --renderer github-actions
+
+      # Snapshotの生成
+      - name: Generate snapshot
+        run: xcodebuild
+          -project "${WORKSPACE_DIR}"
+          -configuration Debug
+          -destination 'platform=iOS Simulator,OS=18.6,name=iPhone 16 Pro'
+          -scheme "${BUILD_SCHEME}"
+          -testPlan homete-snapshot-testing
+          -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
+          test |
           xcbeautify --renderer github-actions
 
       # DangerJSをインストール
