update: PR毎にVRTを実行するように修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,15 +34,19 @@ jobs:
     runs-on: macos-26
 
     steps:
-      # fetch-depth の計算
-      - run: echo "fetch_depth=$(( commits + 1 ))" >> $GITHUB_ENV
-        env:
-          commits: ${{ github.event.pull_request.commits }}
-
       # チェックアウト(リポジトリからソースコードを取得)
       - uses: actions/checkout@v4.2.2
         with:
-          fetch-depth: ${{ env.fetch_depth }}
+          fetch-depth: 0
+
+      - name: Get latest commit of default branch
+        id: get_commit
+        run: |
+          DEFAULT_BRANCH=${{ github.event.repository.default_branch }}
+          git fetch origin $DEFAULT_BRANCH
+          LATEST_COMMIT=$(git rev-parse origin/$DEFAULT_BRANCH)
+          echo "LATEST_COMMIT=$LATEST_COMMIT"
+          echo "commit_sha=$LATEST_COMMIT" >> $GITHUB_OUTPUT
 
       # Xcodeの一覧出力
       - name: Show Xcode list
@@ -102,18 +106,6 @@ jobs:
           -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
           -resultBundlePath "${TEST_OUTPUT_PATH}"
           clean test |
-          xcbeautify --renderer github-actions
-
-      # Snapshotの生成
-      - name: Generate snapshot
-        run: xcodebuild
-          -project "${WORKSPACE_DIR}"
-          -configuration Debug
-          -destination 'platform=iOS Simulator,OS=18.6,name=iPhone 16 Pro'
-          -scheme "${BUILD_SCHEME}"
-          -testPlan homete-snapshot-testing
-          -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
-          test |
           xcbeautify --renderer github-actions
 
       # DangerJSをインストール
