--- a/.github/workflows/ci_update_snapshot_images.yml
+++ b/.github/workflows/ci_update_snapshot_images.yml
@@ -4,12 +4,9 @@
 name: update_snapshot_images
 
 on:
-  push:
-    branches:
-      - "main"
   pull_request:
     branches:
-      - "main"
+      - "**"
     paths-ignore:
       - ".github/ISSUE_TEMPLATE/*"
       - ".gitignore"
@@ -38,15 +35,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get latest commit of default branch
-        id: get_commit
-        run: |
-          DEFAULT_BRANCH=${{ github.event.repository.default_branch }}
-          git fetch origin $DEFAULT_BRANCH
-          LATEST_COMMIT=$(git rev-parse origin/$DEFAULT_BRANCH)
-          echo "LATEST_COMMIT=$LATEST_COMMIT"
-          echo "commit_sha=$LATEST_COMMIT" >> $GITHUB_OUTPUT
-
       # Xcodeの一覧出力
       - name: Show Xcode list
         run: ls /Applications | grep 'Xcode'
@@ -59,21 +47,10 @@ jobs:
       - name: Show Xcode version
         run: xcodebuild -version
 
-      # Snapshotのキャッシュを復元
-      - name: Restore snapshot
-        uses: actions/cache/restore@v4
-        with:
-          path: hometeSnapshotTests/__Snapshots__/
-          key: v1-snapshot-images-${{ steps.get_commit.outputs.commit_sha }}
-
-      - name: Check if snapshot folder exists
-        id: check_snapshots
+      # reg-cliのインストール
+      - name: Install reg-cli
         run: |
-          if [ -d "hometeSnapshotTests/__Snapshots__/" ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-          fi
+          npm i -g reg-cli
 
       # SPMのライブラリのキャッシュ
       - name: Cache Swift Packages For Project
@@ -87,7 +64,6 @@ jobs:
         run: echo "${{ secrets.DEV_FIREBASE_API_KEY_BASE64 }}" | base64 --decode > homete/GoogleService-Info-dev.plist
 
       - name: Xcode Resolve Package Dependencies
-        if: steps.check_snapshots.outputs.exists == 'false'
         run: set -o pipefail &&
           xcodebuild
           -project "${WORKSPACE_DIR}"
@@ -101,8 +77,8 @@ jobs:
 
       # Snapshotの生成
       - name: Generate snapshot
-        if: steps.check_snapshots.outputs.exists == 'false'
-        run: xcodebuild
+        run: set -o pipefail &&
+          xcodebuild
           -project "${WORKSPACE_DIR}"
           -configuration Debug
           -destination 'platform=iOS Simulator,OS=18.6,name=iPhone 16 Pro'
@@ -112,12 +88,28 @@ jobs:
           clean test |
           xcbeautify --renderer github-actions
 
-      - run: ls -la hometeSnapshotTests/__Snapshots__/hometeSnapshotTests
+      - name: copy current snapshot test results
+        run: |
+          mkdir -p Build/VRT/current
+          cp -pr hometeSnapshotTests/__Snapshots__/hometeSnapshotTests/* Build/VRT/current
 
-      # Snapshotのキャッシュを保存
-      - name: Cache snapshot
-        if: steps.check_snapshots.outputs.exists == 'false'
-        uses: actions/cache/save@v4
+      - name: copy base snapshot test results
+        run: |
+          git fetch origin main
+          git switch main
+          mkdir -p Build/VRT/base
+          cp -pr hometeSnapshotTests/__Snapshots__/hometeSnapshotTests/* Build/VRT/base
+
+      # VRTの差分を比較
+      - name: compare snapshot images
+        working-directory: Build/VRT
+        run: |
+          mkdir -p Build/VRT/diff
+          eg-cli current base diff -R report.html
+
+      - name: Upload snapshot comparison result
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          path: hometeSnapshotTests/__Snapshots__/
-          key: v1-snapshot-images-${{ steps.get_commit.outputs.commit_sha }}
+          name: snapshot-comparison-result
+          path: Build/VRT/diff/report.html
