--- a/.github/workflows/ci_vrt.yml
+++ b/.github/workflows/ci_vrt.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Swift project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: update_snapshot_images
+name: vrt
 
 on:
   pull_request:
@@ -77,8 +77,7 @@ jobs:
 
       # Snapshotの生成
       - name: Generate snapshot
-        run: set -o pipefail &&
-          xcodebuild
+        run: xcodebuild
           -project "${WORKSPACE_DIR}"
           -configuration Debug
           -destination 'platform=iOS Simulator,OS=18.6,name=iPhone 16 Pro'
