--- a/.github/workflows/ci_vrt.yml
+++ b/.github/workflows/ci_vrt.yml
@@ -83,6 +83,7 @@ jobs:
           -destination 'platform=iOS Simulator,OS=18.6,name=iPhone 16 Pro'
           -scheme "${BUILD_SCHEME}"
           -testPlan "${TEST_PLAN}"
+          -resultBundlePath "${TEST_OUTPUT_PATH}"
           -clonedSourcePackagesDirPath "${SPM_CLONE_PATH}"
           clean test |
           xcbeautify --renderer github-actions
@@ -112,3 +113,11 @@ jobs:
         with:
           name: snapshot-comparison-result
           path: Build/VRT/diff/report.html
+
+      - name: Upload test result
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-result
+          path: Build/test.xcresult
+          retention-days: 1
