--- a/.github/workflows/ci_vrt.yml
+++ b/.github/workflows/ci_vrt.yml
@@ -95,6 +95,7 @@ jobs:
 
       - name: copy base snapshot test results
         run: |
+          git checkout hometeSnapshotTests/__Snapshots__/
           git fetch origin main
           git switch main
           mkdir -p Build/VRT/base
