--- a/homete.xcodeproj/xcshareddata/xcschemes/hometeSnapshotTests.xcscheme
+++ b/homete.xcodeproj/xcshareddata/xcschemes/hometeSnapshotTests.xcscheme
@@ -42,6 +42,12 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-AppleLanguages (ja)"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
