update: hometeスキーマでvrtを実行する

--- a/.github/workflows/ci_vrt.yml
+++ b/.github/workflows/ci_vrt.yml
@@ -17,7 +17,7 @@ env:
   # チェックアウト
   DEVELOPER_DIR: /Applications/Xcode_26.0.app
   WORKSPACE_DIR: homete.xcodeproj
-  BUILD_SCHEME: hometeSnapshotTests
+  BUILD_SCHEME: homete
   TEST_PLAN: homete-snapshot-testing
   SPM_CLONE_PATH: SourcePackages
   SPM_PACKAGE_RESOLVED_FILE_PATH: homete.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
