--- a/homete.xcodeproj/xcshareddata/xcschemes/hometeSnapshotTests.xcscheme
+++ b/homete.xcodeproj/xcshareddata/xcschemes/hometeSnapshotTests.xcscheme
@@ -14,7 +14,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:homete-snapshot-testing.xctestplan"
+            reference = "container:../homete-snapshot-testing.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
@@ -42,12 +42,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "-AppleLanguages (ja)"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
