update: VRTのディレクトリごと記録する

--- a/.github/workflows/ci_vrt.yml
+++ b/.github/workflows/ci_vrt.yml
@@ -114,5 +114,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: snapshot-comparison-result
-          path: Build/VRT/report.html
+          path: Build/VRT
           retention-days: 1
