--- a/homete.xcodeproj/xcshareddata/xcschemes/hometeSnapshotTests.xcscheme
+++ b/homete.xcodeproj/xcshareddata/xcschemes/hometeSnapshotTests.xcscheme
@@ -14,7 +14,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:homete-snapshot-testing.xctestplan"
+            reference = "container:snapshotTesting.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
