update: ciワークフローのテスト時にVRTを行うように修正

--- a/homete.xcodeproj/xcshareddata/xcschemes/homete.xcscheme
+++ b/homete.xcodeproj/xcshareddata/xcschemes/homete.xcscheme
@@ -36,6 +36,9 @@
          <TestPlanReference
             reference = "container:snapshotTesting.xctestplan">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:CI.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
