--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     # 実行環境はmacosに設定
     runs-on: macos-26
     env:
-      SNAPSHOT_ARTIFACTS: Build/SnapshotsFailures
+      SNAPSHOT_FAILURES_PATH: Build/VRT/SnapshotsFailures
 
     steps:
       # チェックアウト(リポジトリからソースコードを取得)
@@ -61,10 +61,6 @@ jobs:
       # Xcodeのバージョン出力
       - name: Show Xcode version
         run: xcodebuild -version
-
-      # iOS SDKのインストール
-      - name: Install ios sdk
-        run: xcodebuild -downloadPlatform iOS
 
       # SPMのライブラリのキャッシュ
       - name: Cache Swift Packages For ProjectTools
@@ -127,16 +123,12 @@ jobs:
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
 
-      - name: Generate Snapshot Test Reports directory
-        if: always()
-        run: mkdir -p ${{ env.SNAPSHOT_ARTIFACTS }}
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: artifacts
-          path: ${{ env.SNAPSHOT_ARTIFACTS }}
+          path: ${{ env.SNAPSHOT_FAILURES_PATH }}
           retention-days: 1
 
   # Deploy(TestFlight)
