update: swiftlintの警告対応

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -47,3 +47,5 @@ disabled_rules:
 # Configurations
 trailing_whitespace:
   ignores_empty_lines: true
+trailing_closure:
+  only_single_muted_parameter: true
