update: 不要なBackgroundModeの設定を削除

--- a/homete/Info.plist
+++ b/homete/Info.plist
@@ -12,7 +12,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
-		<string>processing</string>
+		<string>fetch</string>
 	</array>
 </dict>
 </plist>
