--- a/.github/workflows/functions-e2e-test.yml
+++ b/.github/workflows/functions-e2e-test.yml
@@ -18,7 +18,7 @@ on:
 env:
   NODE_VERSION: "21"
   JAVA_VERSION: "17" # Firebase Emulator用
-  FUNCTIONS_DIR: firebase/dev/functions
+  FUNCTIONS_DIR: firebase/functions
 
 jobs:
   e2e-test:
