chore: .gitignoreにBundler関連ディレクトリ(.bundle, vendor)を追加

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,10 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
+# Bundler
+.bundle/
+vendor/
+
 # macOS
 
 *.DS_Store
